--- a/action.yml
+++ b/action.yml
@@ -24,5 +24,5 @@ runs:
   image: 'Dockerfile'
   args:
     - ${{ inputs.redis-version }}
-    - ${{ inputs.redis-port }}
+    - ${{ inputs.redis-port-range }}
     - ${{ inputs.redis-container-name }}
